<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/insert_menu"
        android:icon="@drawable/ic_create_white_24dp"
        android:title="@string/insert_new_poem"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/logout_menu"
        android:icon="@drawable/ic_exit_to_app_white_24dp"
        android:title="Logout"
        app:showAsAction="ifRoom"/>
</menu>